Fix warning CC5 and update search payload